tests/ui/badargs.stderr
error: unknown derive-adhoc keyword
  --> ui/badargs.rs:14:9
   |
14 |     fn $unknown() { }
   |         ^^^^^^^

error: no contained expansion field determined what to repeat here
  --> ui/badargs.rs:16:6
   |
16 |       $(
   |  ______^
17 | |     )
   | |_____^

error: unexpected arguments to expansion keyword
  --> ui/badargs.rs:20:19
   |
20 |         f ${fname junk}() { }
   |                   ^^^^

error: unexpected arguments to expansion keyword
  --> ui/badargs.rs:23:29
   |
23 |     ${if false { } else { } forbidden}
   |                             ^^^^^^^^^

error: unexpected arguments to expansion keyword
  --> ui/badargs.rs:29:26
   |
29 |     type Alias = ${ttype $junk};
   |                          ^
...
32 | #[derive(Adhoc)]
   |          ----- in this derive macro expansion
   |
   = note: this error originates in the macro `derive_adhoc_template_Broken` which comes from the expansion of the derive macro `Adhoc` (in Nightly builds, run with -Z macro-backtrace for more info)
